--- a/histoire/src/terminal.css
+++ b/histoire/src/terminal.css
@@ -1,11 +1,11 @@
 :root {
-  --global-font-size: 15px;
-  --global-line-height: 1.4em;
-  --global-space: 10px;
-  --font-stack: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+  --global-font-size: 14px;
+  --global-line-height: 1.5;
+  --global-space: .75rem;
+  --font-stack: 'Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New', monospace, serif;
   --mono-font-stack: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
   --background-color: #fff;
-  --page-width: 60em;
+  --page-width: 60rem;
   --font-color: #151515;
   --invert-font-color: #fff;
   --primary-color: #1a95e0;
@@ -14,6 +14,31 @@
   --progress-bar-background: #727578;
   --progress-bar-fill: #151515;
   --code-bg-color: #e8eff2;
+  --input-style: solid;
+  --display-h1-decoration: none;
+}
+
+.dark {
+  --global-font-size: 15px;
+  --global-line-height: 1.4em;
+  --global-space: 10px;
+  --font-stack: Menlo, Monaco, Lucida Console, Liberation Mono,
+    DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace,
+    serif;
+  --mono-font-stack: Menlo, Monaco, Lucida Console, Liberation Mono,
+    DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace,
+    serif;
+  --background-color: #222225;
+  --page-width: 60em;
+  --font-color: #e8e9ed;
+  --invert-font-color: #222225;
+  --secondary-color: #a3abba;
+  --tertiary-color: #a3abba;
+  --primary-color: #62c4ff;
+  --error-color: #ff3c74;
+  --progress-bar-background: #3f3f44;
+  --progress-bar-fill: #62c4ff;
+  --code-bg-color: #3f3f44;
   --input-style: solid;
   --display-h1-decoration: none;
 }
@@ -75,7 +100,7 @@ blockquote,
 code,
 em,
 strong {
-  line-height: var(--global-line-height);
+  
 }
 
 blockquote,
