--- a/histoire/src/terminal.css
+++ b/histoire/src/terminal.css
@@ -16,6 +16,8 @@
   --code-bg-color: #e8eff2;
   --input-style: solid;
   --display-h1-decoration: none;
+  --tab-bg: black;
+  --tab-text: white;
 }
 
 .dark,
@@ -255,6 +257,63 @@ pre code {
   bottom: -2px;
   position: relative;
 }
+
+.terminal-card > header {
+  padding: var(--global-space);
+  display: flex;
+  justify-content: space-between;
+}
+
+.terminal-card > header.collapsable {
+  cursor: pointer;
+}
+
+.terminal-card p:last-child {
+  margin-bottom: 0;
+}
+
+.terminal-card > header.collapsable:hover {
+  background-color: black;
+  color: white;
+}
+
+.tab-buttons button {
+  padding-left: var(--global-space);
+  padding-right: var(--global-space);
+  border-right: 0;
+  border-bottom: 0;
+}
+
+.tab-buttons .active,  
+.tab-buttons .active:active,
+.tab-buttons .active:hover,
+.tab-buttons .active:focus {
+  background-color: black;
+  color: var(--font-color);
+}
+
+.tab-buttons button:last-child {
+  border-right: 1px solid;
+}
+
+table.border tr,
+table.border td,
+table.border th {
+  border: 0;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
 
 @-webkit-keyframes cursor {
   0% {
