--- a/components/style/style.scss
+++ b/components/style/style.scss
@@ -1,4 +1,6 @@
 @import "rootvars";
+@import "variables";
+@import "mixins";
 
 * {
   box-sizing: border-box;
@@ -39,6 +41,9 @@ a {
   cursor: pointer;
   color: var(--primary-color);
   text-decoration: none;
+  &:focus {
+    @include focused();
+  }
 }
 
 a:hover {
@@ -616,136 +621,11 @@ select:-webkit-autofill:focus {
   overflow: auto;
 }
 
-.btn {
-  border-style: solid;
-  border-width: 1px;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -ms-flex-align: center;
-  align-items: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  cursor: pointer;
-  outline: none;
-  padding: 0.65em 2em;
-  font-size: 1em;
-  font-family: inherit;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  position: relative;
-  z-index: 1;
+// BUTTON
+[role='button']:focus {
+  @include focused-outer();
 }
 
-.btn:active {
-  box-shadow: none;
-}
-
-.btn.btn-ghost {
-  border-color: var(--font-color);
-  color: var(--font-color);
-  background-color: transparent;
-}
-
-.btn.btn-ghost:focus,
-.btn.btn-ghost:hover {
-  border-color: var(--tertiary-color);
-  color: var(--tertiary-color);
-  z-index: 2;
-}
-
-.btn.btn-ghost:hover {
-  background-color: transparent;
-}
-
-.btn-block {
-  width: 100%;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.btn-default {
-  background-color: var(--font-color);
-  border-color: var(--invert-font-color);
-  color: var(--invert-font-color);
-}
-
-.btn-default:hover {
-  background-color: var(--secondary-color);
-  color: var(--invert-font-color);
-}
-
-.btn-default.btn-ghost:hover {
-  border-color: var(--secondary-color);
-  color: var(--secondary-color);
-  z-index: 2;
-}
-
-.btn-error {
-  color: var(--invert-font-color);
-  background-color: var(--error-color);
-  border: 1px solid var(--error-color);
-}
-
-.btn-error:hover {
-  background-color: var(--error-color);
-  border-color: var(--error-color);
-}
-
-.btn-error.btn-ghost {
-  border-color: var(--error-color);
-  color: var(--error-color);
-}
-
-.btn-error.btn-ghost:hover {
-  border-color: var(--error-color);
-  color: var(--error-color);
-  z-index: 2;
-}
-
-.btn-primary {
-  color: var(--invert-font-color);
-  background-color: var(--primary-color);
-  border: 1px solid var(--primary-color);
-  &:focus {
-    outline: 2px solid greenyellow;
-    outline-offset: 0;
-  }
-}
-
-.btn-primary:hover {
-  background-color: var(--primary-color);
-  border-color: var(--primary-color);
-}
-
-.btn-primary.btn-ghost {
-  border-color: var(--primary-color);
-  color: var(--primary-color);
-}
-
-.btn-primary.btn-ghost:hover {
-  border-color: var(--primary-color);
-  color: var(--primary-color);
-  z-index: 2;
-}
-
-.btn-small {
-  padding: 0.5em 1.3em !important;
-  font-size: 0.9em !important;
-}
-
-.btn-group {
-  overflow: auto;
-}
-
-.btn-group .btn {
-  float: left;
-}
-
-.btn-group .btn-ghost:not(:first-child) {
-  margin-left: -1px;
-}
 
 .terminal-card {
   border: 1px solid var(--secondary-color);
