--- a/components/style/_rootvars.scss
+++ b/components/style/_rootvars.scss
@@ -18,6 +18,7 @@
     --display-h1-decoration: none;
     --tab-bg: black;
     --tab-text: white;
+    --focus-color: #{$focusColor};
   }
   
   .dark,
@@ -32,6 +33,7 @@
     --progress-bar-background: #3f3f44;
     --progress-bar-fill: #62c4ff;
     --code-bg-color: #3f3f44;
+    --focus-color: #{$focusColorDark};
   }
 
   
