--- a/components/style/_rootvars.scss
+++ b/components/style/_rootvars.scss
@@ -1,39 +1,39 @@
 :root {
-    --global-font-size: 14px;
-    --global-line-height: 1.5;
-    --global-space: .75rem;
-    --font-stack: 'Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New', monospace, serif;
-    --mono-font-stack: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
-    --background-color: #fff;
-    --page-width: 60rem;
-    --font-color: #151515;
-    --invert-font-color: #fff;
-    --primary-color: #1a95e0;
-    --secondary-color: #727578;
-    --error-color: #d20962;
-    --progress-bar-background: #727578;
-    --progress-bar-fill: #151515;
-    --code-bg-color: #e8eff2;
-    --input-style: solid;
-    --display-h1-decoration: none;
-    --tab-bg: black;
-    --tab-text: white;
-    --focus-color: #{$focusColor};
-  }
-  
-  .dark,
-  .htw-dark {
-    --background-color: #222225;
-    --font-color: #e8e9ed;
-    --invert-font-color: #222225;
-    --secondary-color: #a3abba;
-    --tertiary-color: #a3abba;
-    --primary-color: #62c4ff;
-    --error-color: #ff3c74;
-    --progress-bar-background: #3f3f44;
-    --progress-bar-fill: #62c4ff;
-    --code-bg-color: #3f3f44;
-    --focus-color: #{$focusColorDark};
-  }
+  --global-font-size: #{$rootFontSize};
+  --global-line-height: 1.5;
+  --global-space: 0.75rem;
+  --font-stack: "Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New",
+    monospace, serif;
+  --mono-font-stack: Menlo, Monaco, Lucida Console, Liberation Mono,
+    DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+  --background-color: #fff;
+  --page-width: 60rem;
+  --font-color: #151515;
+  --invert-font-color: #fff;
+  --primary-color: #1a95e0;
+  --secondary-color: #727578;
+  --error-color: #d20962;
+  --progress-bar-background: #727578;
+  --progress-bar-fill: #151515;
+  --code-bg-color: #e8eff2;
+  --input-style: solid;
+  --display-h1-decoration: none;
+  --tab-bg: black;
+  --tab-text: white;
+  --focus-color: #{$focusColor};
+}
 
-  
+.dark,
+.htw-dark {
+  --background-color: #222225;
+  --font-color: #e8e9ed;
+  --invert-font-color: #222225;
+  --secondary-color: #a3abba;
+  --tertiary-color: #a3abba;
+  --primary-color: #62c4ff;
+  --error-color: #ff3c74;
+  --progress-bar-background: #3f3f44;
+  --progress-bar-fill: #62c4ff;
+  --code-bg-color: #3f3f44;
+  --focus-color: #{$focusColorDark};
+}
